Lab5/beginers/phoenix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phoenix
  namespace: observability
  labels:
    app.kubernetes.io/name: phoenix
spec:
  selector:
    app.kubernetes.io/name: phoenix
  ports:
    - name: http
      port: 6006
      targetPort: 6006
    - name: grpc
      port: 4317
      targetPort: 4317
